--- a/settings.html
+++ b/settings.html
@@ -1,7 +1,7 @@
 <div id="tts_settings">
     <div class="inline-drawer">
         <div class="inline-drawer-toggle inline-drawer-header">
-            <b>TTS</b>
+            <b>TTS WebUI Adapter</b>
             <div class="inline-drawer-icon fa-solid fa-circle-chevron-down down"></div>
         </div>
         <div class="inline-drawer-content">
